--- a/frontend/app/[lang]/globals.css
+++ b/frontend/app/[lang]/globals.css
@@ -1,8 +1,28 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* couleurs */
+  --mint: #58c3a3;
+  --beige: #e6c8a1;
+  --dark: #2b2926;
+  --mint-2: #50a47f;
+  --orange: #f27f33;
+  /* typo */
+  --ff-logo: "Monoton", cursive;
+  --ff-heading: "Oswald", sans-serif;
+  --ff-body: "Source Sans Pro", sans-serif;
+  /* --background: #ffffff; */
+  /* --foreground: #171717; */
+  padding: 10px;
+}
+
+body {
+  font-family: var(--ff-body);
+  background: var(--beige);
+  color: var(--dark);
+  line-height: 1.5;
+  border-radius: 10px;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.92);
 }
 
 @theme inline {
@@ -12,15 +32,3 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
