--- a/frontend/app/[lang]/globals.css
+++ b/frontend/app/[lang]/globals.css
@@ -2,11 +2,11 @@
 
 :root {
   /* couleurs */
-  --mint: #58c3a3;
+  --mint: #5aad96;
   --beige: #e6c8a1;
   --dark: #2b2926;
   --mint-2: #50a47f;
-  --orange: #f27f33;
+  --orange: #de7028;
   /* typo */
   --ff-logo: "Monoton", cursive;
   --ff-heading: "Oswald", sans-serif;
@@ -23,12 +23,5 @@ body {
   line-height: 1.5;
   border-radius: 10px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.92);
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
