--- a/frontend/app/[lang]/globals.css
+++ b/frontend/app/[lang]/globals.css
@@ -23,6 +23,14 @@ body {
   line-height: 1.5;
   border-radius: 10px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.92);
+  overflow-x: hidden;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 footer {
