--- a/frontend/app/[lang]/components/header.module.css
+++ b/frontend/app/[lang]/components/header.module.css
@@ -2,7 +2,7 @@
 .header {
   background: var(--dark);
   color: var(--beige);
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -133,4 +133,40 @@
 .burger {
   display: flex;
   justify-content: right;
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+}
+
+.row {
+  display: flex;
+  justify-content: left;
+  flex-direction: row;
+}
+
+
+@media (max-width: 600px) {
+  .searchIcon {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-right: 1.5rem;
+  }
+  .logoutIcon {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .top {
+    position: relative;
+    text-align: center;
+  }
+
+  .top h1 {
+    margin: 0;
+    font-size: clamp(1vw, 5vw, 6vw);
+  }
 }
