--- a/frontend/app/[lang]/components/header.module.css
+++ b/frontend/app/[lang]/components/header.module.css
@@ -8,6 +8,14 @@
   border-top-right-radius: 10px;
 }
 
+@media (max-width: 600px) {
+  .header {
+    padding: 0.5rem 1rem;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+}
+
 .header h1 {
   font-family: var(--ff-logo);
   font-size: 2.5rem;
@@ -46,6 +54,10 @@
   fill: var(--beige);
   width: 1.1em;
   height: 1.1em;
+}
+
+.searchIcon {
+  transform: scale(1.15);
 }
 
 .settingsIcon:hover, .logoutIcon:hover, .searchIcon:hover {
@@ -87,6 +99,7 @@
   animation: contentFade 0.3s ease-in;
   max-width: 80%;
   width: 100%;
+  z-index: 3000;
 }
 
 .filmList {
