--- a/frontend/app/[lang]/globals.css
+++ b/frontend/app/[lang]/globals.css
@@ -42,3 +42,14 @@ footer {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+
+@media (max-width: 600px) {
+  :root {
+    padding: 0px;
+  }
+  body {
+    padding: 0px;
+    border-radius: 0px;
+  }
+}
+
