--- a/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
+++ b/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
@@ -15,8 +15,7 @@
   bottom: 0;
   background-size: cover;
   background-position: center;
-  filter: blur(6px);
-  z-index: -1;
+  filter: blur(8px);
 }
 
 .content {
@@ -70,3 +69,8 @@
   border: 3px solid var(--beige);
 }
 
+@media (min-width: 600px) {
+  .content {
+    
+  }
+} 
