--- a/frontend/app/[lang]/landing/landing.module.css
+++ b/frontend/app/[lang]/landing/landing.module.css
@@ -37,7 +37,6 @@
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-  padding: 2px;
 }
 .card img {
   display: block;
@@ -45,12 +44,18 @@
   height: auto;
 }
 .card .info {
-  padding: 0.5rem;
+  padding: 0.2rem;
   font-family: var(--ff-heading);
   text-transform: uppercase;
   font-size: 0.9rem;
 }
 
+.info h3 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+}
 
 
 
