--- a/frontend/app/[lang]/components/header.module.css
+++ b/frontend/app/[lang]/components/header.module.css
@@ -98,9 +98,18 @@
   padding: 0.2em;
   animation: contentFade 0.3s ease-in;
   max-width: 80%;
-  width: 100%;
-  z-index: 3000;
+  width: 100%;    
+  max-height: 50%;
+  z-index: 3000;   
+  overflow: scroll;
 }
+ 
+@media (max-width: 600px) {
+  .results {
+    max-width: 100%;
+  }
+}
+
 
 .filmList {
   display: flex;
