--- a/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
+++ b/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
@@ -25,6 +25,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.content h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 .poster {
@@ -69,8 +75,18 @@
   border: 3px solid var(--beige);
 }
 
+.row {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
 @media (min-width: 600px) {
-  .content {
-    
+  .row {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    align-items: center;
   }
 } 
