--- a/services/frontend/app/[lang]/components/burger.module.css
+++ b/services/frontend/app/[lang]/components/burger.module.css
@@ -53,6 +53,7 @@
 }
 
 .nav {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -60,10 +61,10 @@
 }
 
 .nav a {
-  margin: 10% 0;
+  margin: 5% 0;
   text-decoration: none;
   color: var(--beige);
-  font-size: 2.0rem;
+  font-size: 1.5rem;
 
 }
 
