--- a/services/frontend/app/[lang]/landing/landing.module.css
+++ b/services/frontend/app/[lang]/landing/landing.module.css
@@ -37,12 +37,12 @@
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  height: 100%;
 }
 .card img {
-  display: block;
-  width: 100%;
-  height: auto;
+  aspect-ratio: 2/3;
 }
+
 .card .info {
   padding: 0.2rem;
   font-family: var(--ff-heading);
