--- a/services/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
+++ b/services/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
@@ -80,6 +80,12 @@
   border: 3px solid var(--beige);
 }
 
+.trailerContainer {
+  width: 30%;
+  height: 100%;
+  position: relative;
+}
+
 .row {
   display: flex;
   flex-direction: column;
@@ -95,3 +101,4 @@
     align-items: center;
   }
 } 
+
