--- a/services/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
+++ b/services/frontend/app/[lang]/films/[idFilm]/filmPage.module.css
@@ -30,7 +30,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background: rgba(0, 0, 0, 0.5); */
 }
 
 .content h2 {
@@ -102,3 +101,7 @@
   }
 } 
 
+.trailerContainer {
+  aspect-ratio: 16/9;
+  width: 70%;
+}
