Add notification popup component. Fix minor issue in the postData function (return false if response success is false). Improve login page CSS.

--- a/services/frontend/app/[lang]/auth/auth.module.css
+++ b/services/frontend/app/[lang]/auth/auth.module.css
@@ -8,3 +8,22 @@
 #mainTitle {
     font-size: 3em;
 }
+
+.button {
+    max-width: 450px;
+    width: 90%;
+    background-color: var(--orange);
+    color: var(--beige);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.button:disabled {
+    max-width: 450px;
+    width: 90%;
+    background-color: var(--orange);
+    color: var(--beige);
+    opacity: 0.6;
+    padding: 10px;
+    border-radius: 5px;
+}
