--- a/services/frontend/app/[lang]/auth/oauth/oauth.module.css
+++ b/services/frontend/app/[lang]/auth/oauth/oauth.module.css
@@ -10,21 +10,23 @@
 }
 
 .customButton {
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
     padding: 12px;
     color: #1f1f1f;
-    background-color: #ffffff61;
+    background-color: #FFFFFF;
     border-radius: 4px;
     border: 1px solid #747775;
+    font-family: Roboto, sans-serif;
 }
 
 .customButton:hover {
-    background-color: rgba(48,48,48,0.12);
+    background-color: #F7F8F8;
+    cursor: pointer;
 }
-
 .icon {
     width: 20px;
     height: 20px;
